test: Add solution for eighth task)
